enabled most of the server and network classes

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
 host_key_checking = False
+deprecation_warnings=False
 inventory = /data01/home/ansible/ansible-practice/snow_cmdb_custom.yaml
 inventory_plugins = /usr/share/custom/inventory:~/.ansible/plugins/inventory:/usr/share/ansible/plugins/inventory:/data01/home/ansible/ansible-practice/
 
